# EDR_Agent

./: .gitignore  CMakeLists.txt  README.md  atomic_tests_guide.md  response_policy.json  simulate.ps1  simulate1.ps1  simulate3.ps1  simulate4.ps1
agent/: CMakeLists.txt
agent/configs/: agent_config.json  features_config.json  mock_events.json  response_policy.json  scaler_params.json
agent/configs/models/: edr_model.onnx
agent/include/: collector.h  collector_registry.h  common.h  entropy.h  features.h  inference.h  lineage_graph.h  normalized_event.h  normalizer.h  onnx_inferencer.h  response.h  ringbuffer.h  rule_engine.h  scorer.h  sliding_window.h
agent/include/telemetry/: alert.h  base.h  dns.h  file.h  network.h  process.h  process_access.h  registry.h
agent/src/: main.cpp
agent/src/collector/: collector.cpp
agent/src/features/: entropy.cpp  lineage_graph.cpp  sliding_window.cpp
agent/src/inference/: onnx_inferencer.cpp  rule_engine.cpp  scorer.cpp
agent/src/pipeline/: normalizer.cpp
agent/src/response/: alert.cpp  block_network.cpp  kill_process.cpp
docs/: agent.md  benchmark_spec.md  feature_engineering.md  index.txt  model_pipeline.md  planning.md  telemetry_spec.md
ml/: eda_features.ipynb  requirements.txt
ml/data/models/: best_lgb_model.pkl  best_lgb_model.txt  edr_model.onnx  edr_model_int8.onnx  rf_baseline.pkl
ml/src/: augment_credential.py  export_onnx.py  export_onnx_v2.py  quantize.py  quantize_v2.py  run_detection_benchmark.py  run_eda.py  train.py  train_v2.py  validate_onnx.py  validate_onnx_v2.py
(+5 files in other folders)
